[gd_scene load_steps=2 format=3 uid="uid://djl17nb6dixy3"]

[ext_resource type="Script" uid="uid://dmio5sjtq3k71" path="res://scripts/drop_item.gd" id="1_hj20x"]

[node name="DropItem" type="Node2D"]
script = ExtResource("1_hj20x")

[node name="Sprite" type="Sprite2D" parent="."]

[node name="InventoryReachTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="timeout" from="InventoryReachTimer" to="." method="_on_inventory_reach_timer_timeout"]
